--- a/package.json
+++ b/package.json
@@ -1,12 +1,33 @@
 {
-  "name": "backend",
+  "name": "sgf-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "start": "node node_modules/nodemon/bin/nodemon server"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "Thiago Moreira",
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "lodash": "^4.17.15",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.28",
+    "mongoose": "^5.9.9",
+    "swagger-jsdoc": "^4.0.0",
+    "swagger-ui-express": "^4.1.4",
+    "xborder-log-messages": "^1.0.0"
+  },
+  "devDependencies": {
+    "jest": "^24.9.0",
+    "mockingoose": "^2.13.2",
+    "moxios": "^0.4.0",
+    "nock": "^11.7.0",
+    "nodemon": "^2.0.1"
+  },
+  "jest": {
+    "testEnvironment": "node"
+  }
 }
