--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "node node_modules/nodemon/bin/nodemon server"
+    "dev": "node node_modules/nodemon/bin/nodemon server",
+    "start": "node server.js"
   },
   "author": "Thiago Moreira",
   "license": "ISC",
