--- a/package.json
+++ b/package.json
@@ -6,31 +6,26 @@
 	"scripts": {
 		"test": "jest",
 		"tdd": "jest -- watch",
-		"dev": "node node_modules/nodemon/bin/nodemon server",
+		"dev": "nodemon server.js",
 		"start": "node server.js"
 	},
 	"author": "Thiago Moreira",
 	"license": "ISC",
 	"dependencies": {
+		"@vendia/serverless-express": "^4.3.4",
 		"bcryptjs": "^2.4.3",
 		"cors": "^2.8.5",
-		"dotenv": "^8.2.0",
+		"dotenv": "^8.6.0",
 		"express": "^4.17.1",
 		"jsonwebtoken": "^8.5.1",
-		"lodash": "^4.17.19",
-		"moment": "^2.29.0",
-		"moment-timezone": "^0.5.31",
-		"mongoose": "^5.10.7",
-		"swagger-jsdoc": "^4.2.0",
-		"swagger-ui-express": "^4.1.4",
-		"xborder-log-messages": "^1.0.0"
+		"lodash": "^4.17.21",
+		"moment": "^2.29.1",
+		"mongoose": "^5.12.7",
+		"swagger-jsdoc": "^4.3.2",
+		"swagger-ui-express": "^4.1.6"
 	},
 	"devDependencies": {
-		"jest": "^24.9.0",
-		"mockingoose": "^2.13.2",
-		"moxios": "^0.4.0",
-		"nock": "^11.7.0",
-		"nodemon": "^2.0.4"
+		"jest": "^24.9.0"
 	},
 	"jest": {
 		"testEnvironment": "node"
