Padronização CI/CD

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,9 @@
 name: deploy to lambda
-on: [push]
+on:
+  pull_request:
+  push:
+    branches:
+      - master
 jobs:
   deploy_source:
     name: build and deploy lambda
