--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
 		"jsonwebtoken": "^8.5.1",
 		"lodash": "^4.17.21",
 		"moment": "^2.29.1",
-		"mongoose": "^5.12.7",
-		"swagger-jsdoc": "^4.3.2",
-		"swagger-ui-express": "^4.1.6"
+		"mongoose": "^5.12.7"
 	},
 	"devDependencies": {
 		"jest": "^24.9.0"
