Implementado MVP do script para clone do banco de dados

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"tdd": "jest -- watch",
 		"dev": "nodemon server.js",
 		"prd": "NODE_ENV=prd nodemon server.js",
-		"start": "node server.js"
+		"start": "node server.js",
+		"backupDatabase": "node cloneDatabaseTest.js"
 	},
 	"author": "Thiago Moreira",
 	"license": "ISC",
