--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"test": "jest",
 		"tdd": "jest -- watch",
-		"dev": "nodemon server.js",
+		"dev": "nodemon --ignore ./dump/ server.js",
 		"prd": "NODE_ENV=prd nodemon server.js",
 		"start": "node server.js",
 		"backupDatabase": "node cloneDatabaseTest.js"
