Criação do readme.md

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"dev": "nodemon --ignore ./dump/ server.js",
 		"prd": "NODE_ENV=prd nodemon server.js",
 		"start": "node server.js",
-		"backupDatabase": "node cloneDatabaseTest.js"
+		"clone-test": "node cloneDatabaseTest.js"
 	},
 	"author": "Thiago Moreira",
 	"license": "ISC",
