--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
 		"@vendia/serverless-express": "^4.3.11",
 		"bcryptjs": "^2.4.3",
 		"cors": "^2.8.5",
-		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
 		"jsonwebtoken": "^8.5.1",
 		"lodash": "^4.17.21",
@@ -25,7 +24,8 @@
 		"mongoose": "^6.0.7"
 	},
 	"devDependencies": {
-		"jest": "^27.2.1"
+		"jest": "^27.2.1",
+		"dotenv": "^10.0.0"
 	},
 	"jest": {
 		"testEnvironment": "node"
