--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
 		"jsonwebtoken": "^8.5.1",
 		"lodash": "^4.17.21",
 		"moment": "^2.29.2",
-		"mongoose": "^6.0.7"
+		"mongoose": "^6.0.7",
+		"pino": "^7.11.0"
 	},
 	"devDependencies": {
-		"jest": "^27.2.1",
-		"dotenv": "^10.0.0"
+		"dotenv": "^10.0.0",
+		"jest": "^27.2.1"
 	},
 	"jest": {
 		"testEnvironment": "node"
