atualização node deploy

--- a/.github/workflows/hml.yml
+++ b/.github/workflows/hml.yml
@@ -1,4 +1,4 @@
-name: deploy to lambda
+name: deploy to lambda hml
 on:
   push:
     branches:
@@ -8,7 +8,7 @@ jobs:
     name: build and deploy lambda
     strategy:
       matrix:
-        node-version: [12.x]
+        node-version: [14.x]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
