--- a/.github/workflows/hml.yml
+++ b/.github/workflows/hml.yml
@@ -13,6 +13,13 @@ jobs:
 
       - name: Terraform Init
         uses: hashicorp/terraform-github-actions/init@v0.4.0
+        with:
+          variables: |
+            lambda_name = "sgf-backend-test"
+            arn_role = "${{ secrets.IAM_ARN }}"
+            db_username = "${{ secrets.DB_USERNAME }}"
+            db_password = "${{ secrets.IAM_ARN }}"
+            key_token = "${{ secrets.KEY_TOKEN }}"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TF_ACTION_WORKING_DIR: 'terraform'
@@ -30,11 +37,33 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-      - name: Sync S3
-        uses: jakejarvis/s3-sync-action@master
+  deploy_source:
+    name: build and deploy lambda
+    strategy:
+      matrix:
+        node-version: [14.x]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: npm install and build
+        run: |
+          npm ci
+          npm run build --if-present
         env:
-          SOURCE_DIR: './src'
-          AWS_REGION: 'us-east-1'
-          AWS_S3_BUCKET: 'sgf-test'
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          CI: true
+      - name: zip
+        uses: montudor/action-zip@v0.1.0
+        with:
+          args: zip -qq -r ./bundle.zip ./
+      - name: default deploy
+        uses: appleboy/lambda-action@master
+        with:
+          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws_region: us-east-1
+          function_name: sgf-backend-test
+          zip_file: bundle.zip
