--- a/.github/workflows/hml.yml
+++ b/.github/workflows/hml.yml
@@ -32,12 +32,12 @@ jobs:
       - name: Terraform Init
         uses: hashicorp/terraform-github-actions/init@v0.4.0
         with:
-          lambda_zip: bundle.zip
-          lambda_name: 'sgf-backend-test'
-          arn_role: '${{ secrets.IAM_ARN }}'
-          db_username: '${{ secrets.DB_USERNAME }}'
-          db_password: '${{ secrets.IAM_ARN }}'
-          key_token: '${{ secrets.KEY_TOKEN }}'
+          -var lambda_zip: bundle.zip
+          -var lambda_name: 'sgf-backend-test'
+          -var arn_role: '${{ secrets.IAM_ARN }}'
+          -var db_username: '${{ secrets.DB_USERNAME }}'
+          -var db_password: '${{ secrets.IAM_ARN }}'
+          -var key_token: '${{ secrets.KEY_TOKEN }}'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TF_ACTION_WORKING_DIR: 'terraform'
