--- a/.github/workflows/hml.yml
+++ b/.github/workflows/hml.yml
@@ -36,12 +36,6 @@ jobs:
           TF_ACTION_WORKING_DIR: 'terraform'
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          lambda_zip: bundle.zip
-          lambda_name: 'sgf-backend-test'
-          arn_role: '${{ secrets.IAM_ARN }}'
-          db_username: '${{ secrets.DB_USERNAME }}'
-          db_password: '${{ secrets.IAM_ARN }}'
-          key_token: '${{ secrets.KEY_TOKEN }}'
 
       - name: Terraform Validate
         uses: hashicorp/terraform-github-actions/validate@v0.3.7
@@ -53,12 +47,14 @@ jobs:
           TF_ACTION_WORKING_DIR: 'terraform'
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          lambda_zip: bundle.zip
-          lambda_name: 'sgf-backend-test'
-          arn_role: '${{ secrets.IAM_ARN }}'
-          db_username: '${{ secrets.DB_USERNAME }}'
-          db_password: '${{ secrets.IAM_ARN }}'
-          key_token: '${{ secrets.KEY_TOKEN }}'
+        with:
+          args: '-var="lambda_zip=bundle.zip"'
+          # lambda_zip: bundle.zip
+          # lambda_name: 'sgf-backend-test'
+          # arn_role: '${{ secrets.IAM_ARN }}'
+          # db_username: '${{ secrets.DB_USERNAME }}'
+          # db_password: '${{ secrets.IAM_ARN }}'
+          # key_token: '${{ secrets.KEY_TOKEN }}'
         # with:
         #   variables: |
         #     lambda_zip = bundle.zip
