--- a/.github/workflows/hml.yml
+++ b/.github/workflows/hml.yml
@@ -18,12 +18,14 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
+
       - name: npm install and build
         run: |
           npm ci
           npm run build --if-present
         env:
           CI: true
+
       - name: zip
         uses: montudor/action-zip@v0.1.0
         with:
@@ -48,7 +50,9 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         with:
-          args: '-var="lambda_zip=bundle.zip"'
+          args: |
+            -var="lambda_name=sgf-backend-test"
+            -var="lambda_zip=bundle.zip"
           # lambda_zip: bundle.zip
           # lambda_name: 'sgf-backend-test'
           # arn_role: '${{ secrets.IAM_ARN }}'
