teste de upload do zip

--- a/.github/workflows/hml.yml
+++ b/.github/workflows/hml.yml
@@ -29,7 +29,14 @@ jobs:
       - name: zip
         uses: montudor/action-zip@v0.1.0
         with:
-          args: zip -qq -r ./bundle.zip ./
+          args: zip -qq -r ./deploy/lambda.zip . -i main
+
+      - name: upload
+        uses: actions/upload-artifact@v2-preview
+        with:
+          name: lambda_zip
+          path: deploy/lambda.zip
+          key: lambda.zip
 
       - name: Terraform Init
         uses: hashicorp/terraform-github-actions/init@v0.4.0
@@ -49,7 +56,7 @@ jobs:
           TF_ACTION_WORKING_DIR: 'terraform'
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          TF_VAR_lambda_zip: bundle.zip
+          # TF_VAR_lambda_zip: bundle.zip
           TF_VAR_lambda_name: 'sgf-backend-test'
           TF_VAR_arn_role: '${{ secrets.IAM_ARN }}'
           TF_VAR_db_username: '${{ secrets.DB_USERNAME }}'
