--- a/.github/workflows/hml.yml
+++ b/.github/workflows/hml.yml
@@ -36,7 +36,6 @@ jobs:
         with:
           name: lambda_zip
           path: lambda.zip
-          key: lambda.zip
 
       - name: Terraform Init
         uses: hashicorp/terraform-github-actions/init@v0.4.0
@@ -56,7 +55,7 @@ jobs:
           TF_ACTION_WORKING_DIR: 'terraform'
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          # TF_VAR_lambda_zip: bundle.zip
+          TF_VAR_lambda_zip: '${lambda_zip}'
           TF_VAR_lambda_name: 'sgf-backend-test'
           TF_VAR_arn_role: '${{ secrets.IAM_ARN }}'
           TF_VAR_db_username: '${{ secrets.DB_USERNAME }}'
