--- a/.github/workflows/hml.yml
+++ b/.github/workflows/hml.yml
@@ -26,6 +26,17 @@ jobs:
         env:
           CI: true
 
+      - name: zip
+        uses: montudor/action-zip@v0.1.0
+        with:
+          args: zip -qq -r ./lambda.zip ./
+
+      - name: upload
+        uses: actions/upload-artifact@v2-preview
+        with:
+          name: lambda_zip
+          path: lambda.zip
+
       - name: Terraform Init
         uses: hashicorp/terraform-github-actions/init@v0.4.0
         env:
@@ -44,8 +55,13 @@ jobs:
           TF_ACTION_WORKING_DIR: 'terraform'
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          TF_VAR_lambda_zip: 'lambda_zip'
+          TF_VAR_file_name: 'lambda.zip'
           TF_VAR_lambda_name: 'sgf-backend-test'
           TF_VAR_arn_role: '${{ secrets.IAM_ARN }}'
           TF_VAR_db_username: '${{ secrets.DB_USERNAME }}'
           TF_VAR_db_password: '${{ secrets.IAM_ARN }}'
           TF_VAR_key_token: '${{ secrets.KEY_TOKEN }}'
+        with:
+          lambda_zip: lambda.zip
+          path: lambda.zip
