--- a/.github/workflows/hml.yml
+++ b/.github/workflows/hml.yml
@@ -55,13 +55,10 @@ jobs:
           TF_ACTION_WORKING_DIR: 'terraform'
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          TF_VAR_lambda_zip: 'lambda_zip'
+          TF_VAR_lambda_zip: lambda.zip
           TF_VAR_file_name: 'lambda.zip'
           TF_VAR_lambda_name: 'sgf-backend-test'
           TF_VAR_arn_role: '${{ secrets.IAM_ARN }}'
           TF_VAR_db_username: '${{ secrets.DB_USERNAME }}'
           TF_VAR_db_password: '${{ secrets.IAM_ARN }}'
           TF_VAR_key_token: '${{ secrets.KEY_TOKEN }}'
-        with:
-          lambda_zip: lambda.zip
-          path: lambda.zip
