--- a/.github/workflows/hml.yml
+++ b/.github/workflows/hml.yml
@@ -1,34 +1,56 @@
 name: Homologation Deploy
+
 on:
   push:
     branches:
       - release
+
 jobs:
-  deploy_source:
-    name: build and deploy lambda
+  build:
+    name: Build Lambda
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version: [20.x]
-    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-      - name: npm install and build
+
+      - name: Install dependencies and build
         run: |
           npm ci
           npm run build --if-present
-      - name: zip
-        uses: montudor/action-zip@v0.1.0
+
+      - name: Create deployment package
+        run: zip -qq -r bundle.zip ./config ./src node_modules package.json package-lock.json
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
         with:
-          args: zip -qq -r ./bundle.zip ./
-      - name: default deploy
-        uses: appleboy/lambda-action@master
+          name: lambda-bundle
+          path: bundle.zip
+
+  deploy:
+    name: Deploy to AWS Lambda
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v4
         with:
-          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws_region: us-east-1
-          function_name: sgf-backend-hml
-          zip_file: bundle.zip
+          name: lambda-bundle
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
+      - name: Deploy to AWS Lambda
+        run: |
+          aws lambda update-function-code --function-name sgf-backend-hml --zip-file fileb://bundle.zip
