--- a/.github/workflows/hml.yml
+++ b/.github/workflows/hml.yml
@@ -26,7 +26,7 @@ jobs:
           npm run build --if-present
 
       - name: Create deployment package
-        run: zip -qq -r bundle.zip ./config ./src node_modules package.json package-lock.json
+        run: zip -qq -r bundle.zip ./config ./src node_modules package.json package-lock.json index.js
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
