--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -1,9 +1,10 @@
-name: Homologation Deploy
+name: Deploy
 
 on:
   push:
     branches:
       - release
+      - master
 
 jobs:
   build:
@@ -38,6 +39,8 @@ jobs:
     name: Deploy to AWS Lambda
     runs-on: ubuntu-latest
     needs: build
+    env:
+      LAMBDA_FUNCTION: ${{ github.ref == 'refs/heads/release' && 'sgf-backend-hml' || 'sgf-backend' }}
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v4
@@ -53,4 +56,4 @@ jobs:
 
       - name: Deploy to AWS Lambda
         run: |
-          aws lambda update-function-code --function-name sgf-backend-hml --zip-file fileb://bundle.zip
+          aws lambda update-function-code --function-name $LAMBDA_FUNCTION --zip-file fileb://bundle.zip
