--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    name: Build Lambda
+    name: Build Lambda (${{ github.ref_name }})
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -36,7 +36,7 @@ jobs:
           path: bundle.zip
 
   deploy:
-    name: Deploy to AWS Lambda
+    name: Deploy to AWS Lambda (${{ github.ref_name }})
     runs-on: ubuntu-latest
     needs: build
     env:
