--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -36,7 +36,7 @@ jobs:
           path: bundle.zip
 
   deploy:
-    name: Deploy to AWS Lambda (${{ github.ref_name }})
+    name: Deploy Lambda (${{ github.ref_name }})
     runs-on: ubuntu-latest
     needs: build
     env:
