--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -40,7 +40,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     env:
-      LAMBDA_FUNCTION: ${{ github.ref == 'refs/heads/release' && 'sgf-backend-hml' || 'sgf-backend' }}
+      LAMBDA_FUNCTION: ${{ github.ref_name == 'master' && 'sgf-backend' || 'sgf-backend-hml' }}
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v4
