--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -1,10 +1,18 @@
 name: Deploy
 
 on:
-  push:
+  workflow_dispatch:
+  pull_request:
     branches:
       - release
       - master
+    types:
+      - ready_for_review
+      - synchronize
+      - opened
+      - reopened
+      - labeled
+      - unlabeled
 
 jobs:
   build:
@@ -38,6 +46,7 @@ jobs:
   deploy:
     name: Deploy Lambda (${{ github.ref_name }})
     runs-on: ubuntu-latest
+    if: contains(github.event.pull_request.labels.*.name, 'deploy')
     needs: build
     env:
       LAMBDA_FUNCTION: ${{ github.ref_name == 'master' && 'sgf-backend' || 'sgf-backend-hml' }}
