--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -1,18 +1,10 @@
 name: Deploy
 
 on:
-  workflow_dispatch:
-  pull_request:
+  push:
     branches:
       - release
       - master
-    types:
-      - ready_for_review
-      - synchronize
-      - opened
-      - reopened
-      - labeled
-      - unlabeled
 
 jobs:
   build:
@@ -46,7 +38,7 @@ jobs:
   deploy:
     name: Deploy Lambda (${{ github.ref_name }})
     runs-on: ubuntu-latest
-    if: contains(github.event.pull_request.labels.*.name, 'deploy')
+    if: contains(github.event.created.labels.*.name, 'deploy')
     needs: build
     env:
       LAMBDA_FUNCTION: ${{ github.ref_name == 'master' && 'sgf-backend' || 'sgf-backend-hml' }}
