--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -13,6 +13,8 @@ jobs:
     name: Build and Deploy (${{ github.ref_name }})
     runs-on: ubuntu-latest
     if: github.event.pull_request.merged == true && contains(github.event.pull_request.labels.*.name, 'deploy')
+    env:
+      LAMBDA_FUNCTION: ${{ github.base_ref == 'main' && 'sgf-backend' || 'sgf-backend-hml' }}
     strategy:
       matrix:
         node-version: [20.x]
